package edu.uees.tutorias.service;

import edu.uees.tutorias.domain.Reserva;

public interface RepositorioReservas {
    void guardar(Reserva reserva);
    Reserva buscarPorId(String id);
}
